# fear-greed-index

./: .gitignore  .mcp.json  CLAUDE.md  README.md  api_server.py  app.py  demo.py  feargreed_index.ipynb  fgi_cli.py  fgi_mcp_server.py  pyproject.toml  shortable_symbols.txt  test.py
fear_greed_index/: CNNFearAndGreedIndex.py  FearAndGreedIndicator.py  scrape_cnn.py
tests/: __init__.py  test_app.py  test_cli.py  test_core.py  test_mcp_server.py  test_readme_examples.py
