[project]
name = "fear-greed-index"
version = "0.1.4"
description = "CNN Fear and Greed Index"
authors = [{name = "Didier Rodrigues Lopes", email = "dro.lopes@campus.fct.unl.pt"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.1",
    "bs4>=0.0.1",
    "matplotlib>=3.3.4",
    "lxml>=4.6.5",
    "Pillow>=9.0.0",
    "streamlit>=1.50.0",
    "plotly>=6.5.0",
    "rich>=14.2.0",
    "click>=8.3.1",
    "alpaca-py>=0.43.2",
    "mcp>=1.23.1",
    "fastapi>=0.123.5",
    "uvicorn>=0.38.0",
]

[project.scripts]
fgi = "fgi_cli:main"
fgi-mcp = "fgi_mcp_server:main"

[project.urls]
Repository = "https://github.com/JOravetz/fear-greed-index"

[dependency-groups]
dev = [
    "Sphinx>=4.0.2",
    "sphinx-rtd-theme>=0.5.2",
    "m2r2>=0.2.7",
    "playwright>=1.56.0",
    "selenium>=4.36.0",
    "webdriver-manager>=4.0.2",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "types-requests>=2.32.4.20250913",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
